tests/snapshots/integration__integration_tests__list__json_tree_matches_main_after_merge.snap
---
source: tests/integration_tests/list.rs
info:
  program: wt
  args:
    - list
    - "--format=json"
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: "[TEST_GIT_CONFIG]"
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    LANG: C
    LC_ALL: C
    SOURCE_DATE_EPOCH: "1735776000"
    WORKTRUNK_CONFIG_PATH: "[TEST_CONFIG]"
---
success: true
exit_code: 0
----- stdout -----
[
  {
    "head_sha": "133d1f05a73a1478707f3438625069c7ebd8eb27",
    "branch": "main",
    "timestamp": 0,
    "commit_message": "Same content on main",
    "ahead": 0,
    "behind": 0,
    "upstream_remote": null,
    "upstream_ahead": 0,
    "upstream_behind": 0,
    "pr_status": null,
    "status": {
      "working_tree": {
        "untracked": false,
        "modified": false,
        "staged": false,
        "renamed": false,
        "deleted": false
      },
      "branch_op_state": "",
      "main_divergence": "IsMain",
      "upstream_divergence": "",
      "worktree_state": ""
    },
    "status_symbols": {
      "working_tree": "",
      "branch_op_state": "",
      "main_divergence": "^",
      "upstream_divergence": "",
      "worktree_state": ""
    },
    "status_line": "main  /u001b[2m^/u001b[22m",
    "type": "worktree",
    "path": "[REPO]",
    "bare": false,
    "detached": false,
    "working_tree_diff": {
      "added": 0,
      "deleted": 0
    },
    "working_tree_diff_with_main": {
      "added": 0,
      "deleted": 0
    },
    "is_main": true,
    "is_current": true
  },
  {
    "head_sha": "d78d130165cc11f6df39113ded5bbf1c16f8ebc3",
    "branch": "feature-merged",
    "timestamp": 0,
    "commit_message": "Merge main into feature",
    "ahead": 2,
    "behind": 0,
    "upstream_remote": null,
    "upstream_ahead": 0,
    "upstream_behind": 0,
    "pr_status": null,
    "status": {
      "working_tree": {
        "untracked": false,
        "modified": false,
        "staged": false,
        "renamed": false,
        "deleted": false
      },
      "branch_op_state": "MatchesMain",
      "main_divergence": "Ahead",
      "upstream_divergence": "",
      "worktree_state": ""
    },
    "status_symbols": {
      "working_tree": "",
      "branch_op_state": "≡",
      "main_divergence": "↑",
      "upstream_divergence": "",
      "worktree_state": ""
    },
    "commits_display": "/u001b[32m↑2/u001b[0m",
    "status_line": "feature-merged  /u001b[2m≡/u001b[22m/u001b[2m↑/u001b[22m  /u001b[32m↑2/u001b[0m",
    "type": "worktree",
    "path": "[REPO].feature-merged",
    "bare": false,
    "detached": false,
    "working_tree_diff": {
      "added": 0,
      "deleted": 0
    },
    "working_tree_diff_with_main": {
      "added": 0,
      "deleted": 0
    },
    "is_main": false
  }
]

----- stderr -----
