tests/snapshots/integration__integration_tests__list__json_with_display_fields.snap
---
source: tests/integration_tests/list.rs
info:
  program: wt
  args:
    - list
    - "--format=json"
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: "[TEST_GIT_CONFIG]"
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    LANG: C
    LC_ALL: C
    SOURCE_DATE_EPOCH: "1735776000"
    WORKTRUNK_BIN: ""
    WORKTRUNK_CONFIG_PATH: "[TEST_CONFIG]"
---
success: true
exit_code: 0
----- stdout -----
[
  {
    "head_sha": "a27cd57d20a6211799da676e70edefa5152f99fe",
    "branch": "main",
    "timestamp": 0,
    "commit_message": "Main commit 2",
    "ahead": 0,
    "behind": 0,
    "branch_diff": {
      "added": 0,
      "deleted": 0
    },
    "upstream_remote": null,
    "upstream_ahead": 0,
    "upstream_behind": 0,
    "pr_status": null,
    "status": {
      "working_tree": {
        "untracked": false,
        "modified": false,
        "staged": false,
        "renamed": false,
        "deleted": false
      },
      "branch_op_state": "",
      "main_divergence": "IsMain",
      "upstream_divergence": "",
      "worktree_state": ""
    },
    "status_symbols": {
      "working_tree": "",
      "branch_op_state": "",
      "main_divergence": "^",
      "upstream_divergence": "",
      "worktree_state": ""
    },
    "status_line": "main  /u001b[2m^/u001b[22m",
    "type": "worktree",
    "path": "[REPO]",
    "bare": false,
    "detached": false,
    "working_tree_diff": {
      "added": 0,
      "deleted": 0
    },
    "working_tree_diff_with_main": {
      "added": 0,
      "deleted": 0
    },
    "is_main": true,
    "is_current": true
  },
  {
    "head_sha": "f16cd37915d5ee93903252f5cf877c76c54f3d50",
    "branch": "feature-ahead",
    "timestamp": 0,
    "commit_message": "Feature commit 2",
    "ahead": 2,
    "behind": 2,
    "branch_diff": {
      "added": 1,
      "deleted": 0
    },
    "upstream_remote": null,
    "upstream_ahead": 0,
    "upstream_behind": 0,
    "pr_status": null,
    "status": {
      "working_tree": {
        "untracked": true,
        "modified": true,
        "staged": false,
        "renamed": false,
        "deleted": false
      },
      "branch_op_state": "",
      "main_divergence": "Diverged",
      "upstream_divergence": "",
      "worktree_state": ""
    },
    "status_symbols": {
      "working_tree": "!?",
      "branch_op_state": "",
      "main_divergence": "↕",
      "upstream_divergence": "",
      "worktree_state": ""
    },
    "commits_display": "/u001b[32m↑2/u001b[0m /u001b[2m/u001b[31m↓2/u001b[0m",
    "branch_diff_display": "/u001b[32m+1/u001b[0m",
    "status_line": "feature-ahead  /u001b[36m!/u001b[39m/u001b[36m?/u001b[39m/u001b[2m↕/u001b[22m  @/u001b[32m+1/u001b[0m /u001b[31m-1/u001b[0m  /u001b[32m↑2/u001b[0m /u001b[2m/u001b[31m↓2/u001b[0m  ^/u001b[32m+1/u001b[0m",
    "type": "worktree",
    "path": "[REPO].feature-ahead",
    "bare": false,
    "detached": false,
    "working_tree_diff": {
      "added": 1,
      "deleted": 1
    },
    "working_tree_diff_with_main": null,
    "is_main": false,
    "working_diff_display": "/u001b[32m+1/u001b[0m /u001b[31m-1/u001b[0m"
  },
  {
    "head_sha": "6c3da84215d400bf6e05a7f9cd1efcfbd825b9e9",
    "branch": "feature-behind",
    "timestamp": 0,
    "commit_message": "Initial commit on main",
    "ahead": 0,
    "behind": 2,
    "branch_diff": {
      "added": 0,
      "deleted": 0
    },
    "upstream_remote": null,
    "upstream_ahead": 0,
    "upstream_behind": 0,
    "pr_status": null,
    "status": {
      "working_tree": {
        "untracked": false,
        "modified": false,
        "staged": false,
        "renamed": false,
        "deleted": false
      },
      "branch_op_state": "NoCommits",
      "main_divergence": "Behind",
      "upstream_divergence": "",
      "worktree_state": ""
    },
    "status_symbols": {
      "working_tree": "",
      "branch_op_state": "_",
      "main_divergence": "↓",
      "upstream_divergence": "",
      "worktree_state": ""
    },
    "commits_display": "/u001b[2m/u001b[31m↓2/u001b[0m",
    "status_line": "feature-behind  /u001b[2m_/u001b[22m/u001b[2m↓/u001b[22m  /u001b[2m/u001b[31m↓2/u001b[0m",
    "type": "worktree",
    "path": "[REPO].feature-behind",
    "bare": false,
    "detached": false,
    "working_tree_diff": {
      "added": 0,
      "deleted": 0
    },
    "working_tree_diff_with_main": null,
    "is_main": false
  }
]

----- stderr -----
