tests/snapshots/integration__integration_tests__list__json_with_metadata.snap
---
source: tests/integration_tests/list.rs
info:
  program: wt
  args:
    - list
    - "--format=json"
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_COUNT: "1"
    GIT_CONFIG_GLOBAL: /dev/null
    GIT_CONFIG_KEY_0: advice.mergeConflict
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_CONFIG_VALUE_0: "false"
    GIT_EDITOR: ""
    LANG: C
    LC_ALL: C
    SOURCE_DATE_EPOCH: "1761609600"
    WORKTRUNK_CONFIG_PATH: "[TEST_CONFIG]"
---
success: true
exit_code: 0
----- stdout -----
[
  {
    "head_sha": "b834638e33dbc6b37002685ee0777f4b8f1af904",
    "branch": "main",
    "timestamp": 0,
    "commit_message": "Initial commit",
    "ahead": 0,
    "behind": 0,
    "branch_diff": {
      "added": 0,
      "deleted": 0
    },
    "upstream_remote": null,
    "upstream_ahead": 0,
    "upstream_behind": 0,
    "pr_status": null,
    "status": {
      "working_tree": {
        "untracked": false,
        "modified": false,
        "staged": false,
        "renamed": false,
        "deleted": false
      },
      "branch_state": "",
      "git_operation": "",
      "main_divergence": "",
      "upstream_divergence": ""
    },
    "status_symbols": {
      "working_tree": "",
      "branch_state": "",
      "git_operation": "",
      "main_divergence": "",
      "upstream_divergence": "",
      "worktree_attrs": ""
    },
    "type": "worktree",
    "path": "[REPO]",
    "bare": false,
    "detached": false,
    "working_tree_diff": {
      "added": 0,
      "deleted": 0
    },
    "working_tree_diff_with_main": {
      "added": 0,
      "deleted": 0
    },
    "worktree_state": null,
    "is_main": true
  },
  {
    "head_sha": "b834638e33dbc6b37002685ee0777f4b8f1af904",
    "branch": "feature-detached",
    "timestamp": 0,
    "commit_message": "Initial commit",
    "ahead": 0,
    "behind": 0,
    "branch_diff": {
      "added": 0,
      "deleted": 0
    },
    "upstream_remote": null,
    "upstream_ahead": 0,
    "upstream_behind": 0,
    "pr_status": null,
    "status": {
      "working_tree": {
        "untracked": false,
        "modified": false,
        "staged": false,
        "renamed": false,
        "deleted": false
      },
      "branch_state": "MatchesMain",
      "git_operation": "",
      "main_divergence": "",
      "upstream_divergence": ""
    },
    "status_symbols": {
      "working_tree": "",
      "branch_state": "≡",
      "git_operation": "",
      "main_divergence": "",
      "upstream_divergence": "",
      "worktree_attrs": ""
    },
    "type": "worktree",
    "path": "[WORKTREE_FEATURE_DETACHED]",
    "bare": false,
    "detached": false,
    "working_tree_diff": {
      "added": 0,
      "deleted": 0
    },
    "working_tree_diff_with_main": {
      "added": 0,
      "deleted": 0
    },
    "worktree_state": null,
    "is_main": false
  },
  {
    "head_sha": "b834638e33dbc6b37002685ee0777f4b8f1af904",
    "branch": "locked-feature",
    "timestamp": 0,
    "commit_message": "Initial commit",
    "ahead": 0,
    "behind": 0,
    "branch_diff": {
      "added": 0,
      "deleted": 0
    },
    "upstream_remote": null,
    "upstream_ahead": 0,
    "upstream_behind": 0,
    "pr_status": null,
    "status": {
      "working_tree": {
        "untracked": false,
        "modified": false,
        "staged": false,
        "renamed": false,
        "deleted": false
      },
      "branch_state": "MatchesMain",
      "git_operation": "",
      "main_divergence": "",
      "upstream_divergence": ""
    },
    "status_symbols": {
      "working_tree": "",
      "branch_state": "≡",
      "git_operation": "",
      "main_divergence": "",
      "upstream_divergence": "",
      "worktree_attrs": "⊠"
    },
    "type": "worktree",
    "path": "[WORKTREE_LOCKED_FEATURE]",
    "bare": false,
    "detached": false,
    "locked": "Testing",
    "working_tree_diff": {
      "added": 0,
      "deleted": 0
    },
    "working_tree_diff_with_main": {
      "added": 0,
      "deleted": 0
    },
    "worktree_state": null,
    "is_main": false
  }
]

----- stderr -----
